Fix to button spacing
layout halves were incorrect.

--- a/CSS/1236_grid.css
+++ b/CSS/1236_grid.css
@@ -18,7 +18,7 @@ body { font-size: 1.125em; padding: 15px 10px;}
 .slot-6-7-8,.slot-7-8-9{ width:897px; } /* Three-Quarters */
 
 /* 6-Col/4-Col Shared Grid Sizes */
-.slot-0-1-2,.slot-1-2-3,.slot-2-3-4,.slot-3-4-5, .slot-6-7,.slot-7-8,.slot-8-9{ width:588px; } /* Halves */
+.slot-0-1-2,.slot-1-2-3,.slot-2-3-4,.slot-3-4-5, .slot-6-7,.slot-7-8,.slot-8-9{ width:593px; } /* Halves */
 
 .logo { width: 20%; }
 .settings{ margin-left: -613px !important;}
